--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pydantic-settings = "^2.5.9"
 pwdlib = "^0.2.0"
 jwt = "^1.3.0"
 cryptography = "^43.0.1"
+plotly = "^5.24.1"
+pandas = "^2.2.3"
 
 
 [build-system]
